# CROX

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  EKF.h  LICENSE  Makefile  PID.h  PwmIn.pio  README.md  betaflight_tuning_guide.md  blackbox.cpp  blackbox.h  blackbox.txt  blackbox_tuning_pid.txt  blackbox_tuning_pid_in_flight0.txt  buzzer.cpp  buzzer.h  calibrate_receiver.h  calibration.cpp  calibration.h  main.cpp  msp_protocol.h  nrf24_radio.cpp  nrf24_radio.h  plot.py  readIMU.h  readPWM.cpp  readPWM.h  run.sh  setup_sd.py  telemetry.h  tuning.cfg  writePWM.cpp  writePWM.h
.github/workflows/: c-cpp.yml
GroundStation/: CMakeLists.txt  CMakePresets.json  main.cpp
GroundStation/GS_Monitor/: CMakeLists.txt  CMakePresets.json  main.cpp
GroundStation/gs_app/: Cargo.toml
GroundStation/gs_app/src/: main.rs
config/: config.cpp  config.h
configurator/: Cargo.toml
configurator/src/: blackbox.rs  cli.rs  config_writer.rs  configuration.rs  ekf.rs  main.rs  modes.rs  motors.rs  receiver.rs  setup.rs  tuning.rs
docs/: README.md  calibrating_ekf.md  config_reference.md  flight_readiness.md  pid_calibration.md  radio_protocol.md
include/: EKF.h  PID.h  blackbox.h  buzzer.h  calibration.h  config.h  nrf24_radio.h  readPWM.h  writePWM.h
include/core/: comm_tasks.h  flight_tasks.h  globals.h  sitl.h
scripts/: debug.py  read_blackbox_and_plot.py
src/: EKF.cpp  EKF.h  PID.cpp  PID.h  blackbox.cpp  blackbox.h  calibration.cpp  calibration.h  hw_config.c  main.cpp  msp_protocol.cpp  msp_protocol.h  nrf24_radio.cpp  nrf24_radio.h  nrf24_telemetry.h  readIMU.cpp  readIMU.h  readPWM.cpp  readPWM.h  telemetry.cpp  telemetry.h  writePWM.cpp  writePWM.h
src/core/: comm_tasks.cpp  comm_tasks.h  flight_tasks.cpp  flight_tasks.h  globals.h  hardware_setup.cpp  hardware_setup.h  sitl.cpp
